--- a/package.json
+++ b/package.json
@@ -9,14 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "apollo-server-micro": "^3.12.0",
+    "cors": "^2.8.5",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-playground-middleware-express": "^1.7.23",
+    "micro": "^10.0.1",
     "next": "13.3.0",
+    "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "stitches": "^1.2.11",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0"
   }
 }
