feat: 스토리북 추가 및 부가적인 세팅 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,10 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
+    "typeRoots": ["node_modules/@types"],
     "paths": {
       "@/*": ["*"]
-    },
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "extension"]
