--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/graphql": "^14.5.0",
@@ -33,10 +37,21 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
+    "@storybook/addon-essentials": "7.0.5",
+    "@storybook/addon-interactions": "7.0.5",
+    "@storybook/addon-links": "7.0.5",
+    "@storybook/blocks": "7.0.5",
+    "@storybook/nextjs": "7.0.5",
+    "@storybook/react": "7.0.5",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@types/aria-query": "^5.0.1",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "storybook": "7.0.5"
   }
 }
