feat: graphql 추가 및 mongodb 연동

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-    "typeRoots": ["node_modules/@types"],
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": ["vitest/globals"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*"],
   "exclude": ["node_modules", "extension"]
 }
