--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/server": "^4.6.0",
+    "@as-integrations/next": "^1.3.0",
     "@stitches/react": "^1.2.8",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
@@ -20,15 +22,22 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@vitejs/plugin-react-swc": "^3.3.0",
     "apollo-server-micro": "^3.12.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.23",
+    "graphql-scalars": "^1.21.3",
+    "graphql-tools": "^8.3.20",
     "micro": "^10.0.1",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "prettier": "^2.8.7",
     "react": "18.2.0",
@@ -37,7 +46,9 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@apollo-elements/rollup-plugin-graphql": "^1.0.3",
     "@babel/preset-typescript": "^7.21.4",
+    "@rollup/plugin-graphql": "^2.0.3",
     "@storybook/addon-essentials": "7.0.5",
     "@storybook/addon-interactions": "7.0.5",
     "@storybook/addon-links": "7.0.5",
@@ -52,6 +63,11 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "storybook": "7.0.5"
-  }
+    "storybook": "7.0.5",
+    "vitest": "^0.30.1"
+  },
+  "main": "index.js",
+  "repository": "https://github.com/khuniiii/anyjoy.git",
+  "author": "Kyeonghun <48789893+khuniiii@users.noreply.github.com>",
+  "license": "MIT"
 }
