--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/nextjs": "7.0.5",
     "@storybook/react": "7.0.5",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/aria-query": "^5.0.1",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-config-prettier": "^8.8.0",
