--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/.cache
+
 # dependencies
 /node_modules
 /.pnp
@@ -34,6 +36,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#codegen
+*.graphql.ts
 
 # graphql
 /graphql/generated.ts
