--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "DOTENV_CONFIG_PATH=.env.local yarn graphql && next dev",
+    "build": "yarn graphql && next build",
+    "build:local": "DOTENV_CONFIG_PATH=.env.local yarn graphql && next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "graphql": "graphql-codegen -r dotenv/config"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.12",
     "@apollo/server": "^4.6.0",
     "@as-integrations/next": "^1.3.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@stitches/react": "^1.2.8",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
@@ -39,6 +43,7 @@
     "micro": "^10.0.1",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
+    "nextjs-cors": "^2.1.2",
     "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,6 +53,12 @@
   "devDependencies": {
     "@apollo-elements/rollup-plugin-graphql": "^1.0.3",
     "@babel/preset-typescript": "^7.21.4",
+    "@graphql-codegen/cli": "3.0.0",
+    "@graphql-codegen/client-preset": "^2.0.0",
+    "@graphql-codegen/introspection": "3.0.0",
+    "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+    "@graphql-codegen/typed-document-node": "^4.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@rollup/plugin-graphql": "^2.0.3",
     "@storybook/addon-essentials": "7.0.5",
     "@storybook/addon-interactions": "7.0.5",
@@ -66,6 +77,9 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "storybook": "7.0.5",
     "vitest": "^0.30.1"
+  },
+  "resolutions": {
+    "@types/react": "17.0.44"
   },
   "main": "index.js",
   "repository": "https://github.com/khuniiii/anyjoy.git",
