--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/server": "^4.6.0",
     "@as-integrations/next": "^1.3.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@stitches/react": "^1.2.8",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
@@ -41,8 +42,10 @@
     "graphql-scalars": "^1.21.3",
     "graphql-tools": "^8.3.20",
     "micro": "^10.0.1",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "nextjs-cors": "^2.1.2",
     "prettier": "^2.8.7",
     "react": "18.2.0",
