--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@stitches/react": "^1.2.8",
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -29,6 +30,8 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "apollo-server-micro": "^3.12.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
@@ -72,6 +75,7 @@
     "@storybook/testing-library": "0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/aria-query": "^5.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
