--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "apollo-server-micro": "^3.12.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -44,15 +45,17 @@
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-scalars": "^1.21.3",
     "graphql-tools": "^8.3.20",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "micro": "^10.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
-    "next": "13.3.0",
+    "next": "^13.4.13",
     "next-auth": "^4.22.1",
     "nextjs-cors": "^2.1.2",
     "prettier": "^2.8.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "stitches": "^1.2.11",
     "typescript": "^5.0.4"
   },
@@ -76,6 +79,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/aria-query": "^5.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
