--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.17",
     "@types/graphql": "^14.5.0",
     "@types/node": "^18.15.11",
+    "@types/quill": "^2.0.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -45,6 +46,7 @@
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-scalars": "^1.21.3",
     "graphql-tools": "^8.3.20",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "micro": "^10.0.1",
@@ -54,8 +56,12 @@
     "next-auth": "^4.22.1",
     "nextjs-cors": "^2.1.2",
     "prettier": "^2.8.7",
+    "quill": "^1.3.7",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-use": "^17.4.0",
     "stitches": "^1.2.11",
     "typescript": "^5.0.4"
   },
