--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@apollo/client": "^3.7.12",
     "@apollo/server": "^4.6.0",
     "@as-integrations/next": "^1.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@stitches/react": "^1.2.8",
+    "@toss/use-overlay": "^1.3.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
