--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "next": "^13.4.13",
-    "next-auth": "^4.22.1",
+    "next-auth": "4.22.1",
     "nextjs-cors": "^2.1.2",
     "prettier": "^2.8.7",
     "quill": "^1.3.7",
