--- a/package.json
+++ b/package.json
@@ -54,17 +54,20 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
+    "latest": "^0.2.0",
     "micro": "^10.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "next": "^13.4.13",
     "next-auth": "4.22.1",
     "nextjs-cors": "^2.1.2",
+    "nprogress": "^0.2.0",
     "prettier": "^2.8.7",
     "quill": "^1.3.7",
     "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-quill": "^2.0.0",
     "react-use": "^17.4.0",
     "stitches": "^1.2.11",
