feat: next 13 app dir

--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
+    "encoding": "^0.1.13",
     "eslint": "^8.38.0",
-    "eslint-config-next": "^13.3.0",
+    "eslint-config-next": "^13.5.2",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
@@ -58,7 +59,7 @@
     "micro": "^10.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
-    "next": "^13.4.13",
+    "next": "^13.5.2",
     "next-auth": "4.22.1",
     "nextjs-cors": "^2.1.2",
     "nprogress": "^0.2.0",
