--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/graphql": "^14.5.0",
     "@types/node": "^18.15.11",
     "@types/quill": "^2.0.11",
-    "@types/react": "18.0.35",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react-swc": "^3.3.0",
