Revert "Searchbar style"

--- a/package.json
+++ b/package.json
@@ -31,21 +31,20 @@
     "@types/graphql": "^14.5.0",
     "@types/node": "^18.15.11",
     "@types/quill": "^2.0.11",
-    "@types/react": "^18.0.21",
+    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "apollo-server-micro": "^3.12.0",
-    "axios": "^1.5.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
-    "encoding": "^0.1.13",
     "eslint": "^8.38.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint-config-next": "^13.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
@@ -59,7 +58,7 @@
     "micro": "^10.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
-    "next": "^13.5.2",
+    "next": "^13.4.13",
     "next-auth": "4.22.1",
     "nextjs-cors": "^2.1.2",
     "nprogress": "^0.2.0",
